--- a/1.html
+++ b/1.html
@@ -11,9 +11,7 @@
   </script>
 </head>
 <body>
-  .container>header#hd>h1>a[href="#"]>img[alt="이미지"]^^
-  >section#main>div.slider+div.community(>div.A(>div.c1+div.c2)+div.B+div.C)
-  +footer#fd>h1(>a[href="#"]>img[alt="이미지"])+div.copy+div.SNS
+  .container>header#hd>h1>a[href="#"]>img[alt="이미지"]^^>section#main>div.slider+div.community(>div.A(>div.c1+div.c2)+div.B+div.C)^>footer#fd>h1(>a[href="#"]>img[alt="이미지"])+div.copy+div.SNS
 
 </body>
 </html>
